# shop-backend

./: .gitignore  pyproject.toml
scripts/: linters.sh
src/: dump.json
src/adaptive_images/: admin.py  apps.py  services.py  tasks.py
src/adaptive_images/migrations/: 0001_initial.py
src/adaptive_images/models/: models.py
src/admintools/: admin.py  apps.py  utils.py
src/admintools/api/: serializers.py
src/admintools/management/commands/: startapp.py
src/admintools/migrations/: 0001_initial.py
src/admintools/models/: __init__.py  models.py
src/admintools/templates/admintools/: stacked_inline_o2o.html
src/catalog/: admin.py  filters.py  forms.py  utils.py
src/catalog/api/: serializers.py  urls.py  views.py
src/catalog/migrations/: 0001_initial.py  0002_alter_model_slug_alter_product_slug.py  0002_alter_product_modification_alter_property_beam_and_more.py  0002_category_slug_group_slug_alter_product_model.py  0003_alter_product_scheme.py  0003_remove_model_image.py  0004_rename_schema_product_scheme.py
src/catalog/models/: managers.py  models.py
src/content/: admin.py
src/content/api/: serializers.py  urls.py  views.py
src/content/migrations/: 0001_initial.py  0002_alter_button_banner.py  0002_banner_mobile_image_contentblock_form.py  0003_alter_banner_image_alter_banner_table_and_more.py  0003_alter_modelcard_options_alter_modelcard_block_and_more.py  0004_alter_modelcard_model_alter_projectcard_project_and_more.py  0005_alter_modelcard_title_alter_page_slug_and_more.py  0006_modelcard_arrow_projectcard_arrow_publication_arrow.py  0007_banner_addrees_banner_email_banner_phone.py  0008_remove_contentblock_form_contentblock_type.py  0009_banner_type_alter_contentblock_type.py  0010_alter_banner_type.py  0011_rename_text_button_title_and_more.py
src/content/models/: managers.py  models.py
src/core/: celery.py  urls.py
src/core/settings/: __init__.py  api.py  base.py  databases.py
src/projects/: admin.py  forms.py
src/projects/migrations/: 0001_initial.py  0002_remove_project_is_on_main_page.py  0003_remove_feedback_is_on_main_page.py  0004_alter_project_slug.py  0005_rename_text_feedback_description.py
src/projects/models/: models.py
